crud operation on class
