# api/user.go
@@ -1,10 +1,9 @@
 package api
 
-
 import (
-	"github.com/gin-gonic/gin"
-"github.com/Aman17101/SchoolMangement/model"
+	"github.com/Aman17101/SchoolMangement/model"
 	"github.com/Aman17101/SchoolMangement/util"
+	"github.com/gin-gonic/gin"
 )
 
 func (api ApiRouts) UserRouts(routes *gin.Engine) {
@@ -16,7 +15,10 @@ func (api ApiRouts) UserRouts(routes *gin.Engine) {
 		group.GET("/all", api.AuthMiddlewareComplete(), api.GetUsers)
 		group.POST("/signup", api.SignUp)
 		group.POST("/signin", api.SignIn)
-	
+		group.GET("/filter", api.GetUsersByFilter)
+		group.PUT("/update/:id", api.AuthMiddlewareComplete(), api.UpdateUser)
+		group.DELETE("/delete/:id", api.AuthMiddlewareComplete(), api.DeleteUser)
+
 	}
 
 }
@@ -64,9 +66,59 @@ func (api ApiRouts) GetUsers(ctx *gin.Context) {
 	api.Server.GetUsers(ctx)
 }
 
+// Handler to get all users based on filter
+// @router /user/filter [get]
+// @summary Get all users based on given filters
+// @tags users
+// @produce json
+// @param email query string false "email"
+// @param id query string false "id"
+// @param password query string false "password"
+// @param active query bool false "active"
+// @param created_by query string false "created_by"
+// @param updated_by query string false "updated_by"
+// @param first_name query string false "first_name"
+// @param middle_name query string false "middle_name"
+// @param last_name query string false "last_name"
+// @param lane query string false "lane"
+// @param village query string false "village"
+// @param city query string false "city"
+// @param district query string false "district"
+// @param pincode query int false "pincode"
+// @param state query string false "state"
+// @param start_date query string false "start date"
+// @param end_date query string false "end date"
+// @param page query int false "Page number (default: 1)"
+// @param limit query int false "Number of results per page (default: 10)"
+// @success 200 {array} model.User
+// @Security ApiKeyAuth
+func (api ApiRouts) GetUsersByFilter(c *gin.Context) {
+	api.Server.GetUserByFilter(c)
+}
 
+// Handler to update a user
+// @router /user/update/{id} [put]
+// @summary Update a user
+// @tags users
+// @accept json
+// @produce json
+// @param id path string true "User ID"
+// @param user body model.User true "User object"
+// @success 200 {object} model.User
+// @Security ApiKeyAuth
+func (api ApiRouts) UpdateUser(c *gin.Context) {
+	api.Server.UpdateUser(c)
+}
 
-
+// Handler to delete a user
+// @router  /user/delete/{id} [delete]
+// @summary Delete a user
+// @tags users
+// @param id path string true "User ID"
+// @Security ApiKeyAuth
+func (api ApiRouts) DeleteUser(c *gin.Context) {
+	api.Server.DeleteUser(c)
+}
 
 // Handler to SignUp a user
 // @router /user/signup [post]
@@ -92,5 +144,3 @@ func (api ApiRouts) SignUp(c *gin.Context) {
 func (api ApiRouts) SignIn(c *gin.Context) {
 	api.Server.SignIn(c)
 }
-
-	
